1.5/src/deployment_back.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: multitool-backend
  labels:
    app: multitool
spec:
  replicas: 1
  selector:
    matchLabels:
      app: multitool
  template:
    metadata:
      labels:
        app: multitool
    spec:
      containers:
      - name: multitool
        image: wbitt/network-multitool
        ports:
          - containerPort: 8080
            name: multitool-8080
