1.5/src/service_back.yaml
apiVersion: v1
kind: Service
metadata:
  name: back-svc
spec:
  ports:
    - name: multitool-8080
      port: 9002
      protocol: TCP
      targetPort: multitool-8080
  selector:
    app: multitool
