1.5/src/service_front.yaml
apiVersion: v1
kind: Service
metadata:
  name: front-svc
spec:
  ports:
    - name: nginx-80
      port: 9001
      protocol: TCP
      targetPort: nginx-80
  selector:
    app: nginx
